# barq-mesh-web

./: .gitignore  Cargo.toml  README.md  build.sh  index.html  worker.js
.cargo/: config.toml
docs/: API.md  ARCHITECTURE.md  PHASES.md
examples/phase1_store/: index.html
examples/phase2_mesh/: index.html
examples/phase3_search/: index.html
examples/phase4_agents/: index.html
examples/phase5_llm/: index.html
examples/phase6_crosstab/: index.html
examples/phase7_mcp/: index.html
src/: lib.rs
src/agents/: pipeline.rs
src/llm/: inference.rs
src/mcp/: server.rs
src/mesh/: aimesh.rs  bus.rs  mod.rs  pool.rs  queue.rs  topology.rs  types.rs
src/store/: barq_vweb_store.rs  mod.rs
src/worker/: entry.rs  mod.rs
